--- a/main.tex
+++ b/main.tex
@@ -291,7 +291,7 @@ very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127}/2$ , 
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
 \begin{equation}
 R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}
-\begin{equation}
+\end{equation}
 
 Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of R by $R_{1}$ is about $4\pi$ , the canonical form for $\sqrt{a}$, the deviation being compatible
@@ -532,7 +532,7 @@ t{G, m_{e} , g_{PN} } = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^
 \end{equation}, where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 \begin{equation}
 t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}
-\begin{equation}
+\end{equation}
 where the above Tifft factor F/a appears. The implication of the time 
 \begin{equation}
 t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
