--- a/main.tex
+++ b/main.tex
@@ -700,7 +700,9 @@ a_{w} \approx (2\gamma \cdot 137 \cdot a/\pi)^{3}
 \end{equation}
 Now, by introducing the featured length $$l_{eF} = (\frac{G_{F}}{m_{e} \cdot c^{2}})^{1/3}$$ , the electroweak constant appears as
 a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
-$$\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi$$
+\begin{equation}
+\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi
+\end{equation}
 see below how this formulae simplifies again by using the Atiyah Constant.
 
 \subsection {The Muon and Tau fine tuning}
@@ -712,20 +714,28 @@ indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: 
 m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
-$$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
+\begin{equation}
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}
+\end{equation}
 has a mathematical justification in term of circulating matrix. The correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
 gives $$\tau \approx 3477.441701$$. This Koide relation, quite discarded by the communality, is another sign of
 the serious incompleteness of present Particle Physics standard model. This value correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to $10^{-7}$:
-$$1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}$$
+\begin{equation}
+1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
+\begin{equation}
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
-$$W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}$$
-$$Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}$$
+\begin{equation}
+W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}
+\end{equation}
+\begin{equation}
+Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}
+\end{equation}
 Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
 
 \subsection {The Direct Gravitational Constant mathematical fine-tuning}
@@ -766,15 +776,21 @@ dimensions. So, this corresponds to a dimensional reduction, by eliminating 137,
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
 Bearing in mind:
-$$m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV$$
+\begin{equation}
+m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV
+\end{equation}
 compatible with the Higgs Boson energy, interesting to note the perfect match with the dimension index $k \approx \pi: \gamma\Gamma
 \approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
 $\Gamma \approx e^\pi + 2$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
-$$a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}$$
+\begin{equation}
+a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}
+\end{equation}
 the first one is due to Reilly, and the second one confirms the R value. Moreover the uncertainty ranges from 0.013\% to 0.046\%:
-$$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}$$
+\begin{equation}
+a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}
+\begin{equation}
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
 
@@ -1064,6 +1080,25 @@ month {09},
 pages {336-340},
 title {Emergence of a New Quantum Mechanics by Multivalued Logic},
 doi {10.1142/9789814504782-0036}
+}
+
+\bibitem{35} {dataset,
+author = {Sternheimer, Joël},
+year = {1994},
+month = {05},
+pages = {},
+title = {Ondes échelle II. Aperçu de théorie non-linéaire et d'applications biologiques.}
+}
+
+\bibitem{36}{article,
+author = {Maruani, Jean},
+year = {2015},
+month = {12},
+pages = {n/a-n/a},
+title = {The Dirac Electron: From Quantum Chemistry to Holistic Cosmology},
+volume = {63},
+journal = {Journal of the Chinese Chemical Society},
+doi = {10.1002/jccs.201500374}
 }
 
 \end{thebibliography}
