--- a/main.tex
+++ b/main.tex
@@ -724,7 +724,7 @@ the serious incompleteness of present Particle Physics standard model. This valu
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to $10^{-7}$:
 \begin{equation}
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
-\begin{equation}
+\end{equation}
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
@@ -770,7 +770,9 @@ W \approx 137^{2} \Gamma / 3d_{e}
 ( \Gamma\sqrt{a_{w}/\gamma d_{e})}^{1/3} \approx 4n\prime / \Gamma
 \end{equation}
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
-$$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F$$
+\begin{equation}
+ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
+\end{equation}
 Now, as recalled before in the Holic Principle, the exponents represents the number of
 dimensions. So, this corresponds to a dimensional reduction, by eliminating 137, from 9D and 6D to
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
@@ -790,8 +792,8 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\
 the first one is due to Reilly, and the second one confirms the R value. Moreover the uncertainty ranges from 0.013\% to 0.046\%:
 \begin{equation}
 a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}
-\begin{equation}
-where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
+\end{equation}
+where j is the Sternheimer scale factor, central in Theoretical Biology [3][35], being, in particular the
 Temperature ratio Mammal/CMB.
 
 \section {Discussion}
