--- a/main.tex
+++ b/main.tex
@@ -710,8 +710,12 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 Admitting the above relation, this defines \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}, inside its $2.5 10^{-7}$
-indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
-m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
+indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: 
+\begin{equation}
+\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
+m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}
+\end{equation}. 
+It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 \begin{equation}
@@ -793,7 +797,7 @@ the first one is due to Reilly, and the second one confirms the R value. Moreove
 \begin{equation}
 a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}
 \end{equation}
-where j is the Sternheimer scale factor, central in Theoretical Biology [3][35], being, in particular the
+where j is the Sternheimer scale factor, central in Theoretical Biology [3][39], being, in particular the
 Temperature ratio Mammal/CMB.
 
 \section {Discussion}
