--- a/main.tex
+++ b/main.tex
@@ -179,7 +179,7 @@ another evacuation mechanism must occur: it would be the role of massive black h
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure}
+\includegraphics[width=8cm,height=6.5cm]{./figures/figure}
 \caption{The Topological Axis.}
 \label{fig:figure_label}
 \end{figure}
@@ -316,12 +316,16 @@ violate the most basic prerequisite of physics, the generality of Doppler phenom
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
 \hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
-$$t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}$$
-The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
-292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant 
+\begin{equation}
+t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}
+\end{equation}
+The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
+\begin{equation}
+E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
+\end{equation}, itself tied to the weak force constant 
 \begin{equation}
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
-1.4358509(7) \times 10^{-62} Joule \cdot m^{3}
+1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
 \end{equation}
 \cite{Pdc}. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
@@ -404,7 +408,7 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure1}
+\includegraphics[width=8cm,height=6.5cm\textwidth]{./figures/figure1}
 \caption{Resonance-spectrum $F(\nu)$ computed for 15 motions of the largest, fast-spinning bodies of
 the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
 shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
@@ -413,7 +417,7 @@ shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurab
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure2}
+\includegraphics[width=8cm,height=6.5cm\textwidth]{./figures/figure2}
 \caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
@@ -421,7 +425,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure3}
+\includegraphics[width=8cm,height=6.5cm\textwidth]{./figures/figure3}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
 Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
@@ -430,7 +434,7 @@ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{./figures/figure4}
+\includegraphics[width=8cm,height=6.5cm\textwidth]{./figures/figure4}
 \caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
 at nearly $3.9\theta$ significance (after Kotov, 2018).}
@@ -576,10 +580,15 @@ point for the superstring value n = 10, and the remarkable sum:
 \begin{equation}
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
+So 
+\begin{equation}
+137 = 2^{7} - 1 + 3 + 7
+\end{equation}, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
-$ln137/ln(a/137) \approx (2+135/d_{e})^{2}$
+\begin{equation}
+ln137/ln(a/137) \approx (2+135/d_{e})^{2}
+\end{equation}
 meaning the ratio a/137 acts as a canonical ratio.
 
 \subsection{The Arithmetical Logic : Holic Principle and Topological Axis}
@@ -686,7 +695,9 @@ conjunction:
 f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
-$$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
+\begin{equation}
+(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}
+\end{equation}
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
 the occidental 12 tones scale.
 
@@ -715,7 +726,10 @@ indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses:
 \frac{E_{F}}{m_{e} \cdot c^{2}} \approx
 m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}
 \end{equation}. 
-It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
+It yields to a muon mass relative to electron 
+\begin{equation}
+\mu = 206.7682869
+\end{equation}, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 \begin{equation}
@@ -861,7 +875,7 @@ transform properties. Thirdly, in cosmology, the recourse to the Multiverse conu
 
 
 \section {Conclusions Simplicity at work}
-\markright{Your Full Names.  Short Title of Your Paper}
+\markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
@@ -942,7 +956,7 @@ of proving the existence of a fundamental theory.
 \end{figure}
 
 \section{Citations}
-\markright{Your Full Names.  Short Title of Your Paper}
+\markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
 A single citation is here: \cite{eddy}. Multiple citations are as follows \cite{bondi,Pez,La2}. A citation containing a comment is \cite[see p.\,5]{eddy}
 
