--- a/main.tex
+++ b/main.tex
@@ -109,8 +109,13 @@ clue in steady-state cosmology based on the Perfect Cosmological Principle (spat
 homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
 defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
-Hydrogen molecule, where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, and the
-gravitational coupling constant $a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}$ , so the speed c is eliminated. This conforms with
+Hydrogen molecule, where 
+\lambdabar_{e} = \hbar/cm_{e}
+\end{equation} is the Electron Compton reduced wavelength, and the
+gravitational coupling constant 
+\begin{equation}
+a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}
+\end{equation}, so the speed c is eliminated. This conforms with
 Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
@@ -118,14 +123,21 @@ value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
-and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
-(\lambdabar_{e} /l\prime_{micro} )^{2}$ :
+and results from the imbrication of relations of the form 
+\begin{equation}
+\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
+\end{equation}
+, followed by 
+\begin{equation}
+l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l\prime_{micro} )^{2}
+\end{equation}:
 $$
 \begin{array}{ll}
 %
 \displaystyle
-\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \\[+8pt]  % 1st row
-\sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32} \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\% 2nd row
+\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim \\[+8pt]  % 1st row
+(\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32}\\% 2nd row
+\sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\% 3rd row
 \end{array}
 $$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is eightfold,
@@ -195,14 +207,14 @@ critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle , only devoted to 3D application \cite{bousso}[6]:
 $S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}$
-where $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
+where $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Let's not forget, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
-The cosmic wavelength $\lambdabar_{M} \sim 10^{-95} m$ breaks the `Planck wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
+The cosmic wavelength $\lambdabar_{M} \sim 10^{-95} m$ breaks `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed for decades. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
 (3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called `dark energy` being compatible with 7/10, this dark energy is a
@@ -213,12 +225,12 @@ monochrome instead of the monoradial relation above:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R_{(0)} GC /l_{P}
 \end{equation}
-with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, making appear an energy larger than that of the visible Universe by a
+with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
 In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar^{2}/Gm_{N}^{3}
-\approx 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
+\approx 18.105 Gly$, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius $R\prime$ appears as the spherical hologram representation of the outer Grandcosmos:
@@ -236,7 +248,7 @@ This series of large circles generates, by scanning, the approximation of a sphe
 from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as $\pi$ (See Chapter 3).
+analysis, such as $\pi$ (See Section 3).
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
@@ -258,7 +270,7 @@ The critical mass is related to the elementary masses by:
 \begin{equation}
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
 \end{equation}
-this directly involves the mass of Planck $m_{P}$ , which at this day, has no known application, except
+this directly involves Planck's mass $m_{P}$ , which at this day, has no known application, except
 that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the Relativity Theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
@@ -541,7 +553,7 @@ where the above Tifft factor F/a appears. The implication of the time
 \begin{equation}
 t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
 \end{equation}
-confirms the above Planck wall breakdown.
+confirms the above Planck's wall breakdown.
 
 \section{Fine-tuning with intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
@@ -554,7 +566,7 @@ with other constants g and $g\prime$, or with the energy level. These are reduct
 By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. What a
 pity for `immergence` to be a neologism.
 The Eddington's proposal for a was the whole number 137, which intrigued many physicists for a
-century, but apparently nobody signaled it has a fundamental mathematical property: it appears as a
+century, but apparently nobody highlighted it as a fundamental mathematical property: it appears as a
 Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
@@ -564,12 +576,21 @@ space-time. Indeed:
 \begin{equation}
 \frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}
 \end{equation}
-Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
+Since Riemann series are tied to the prime number distribution, it sounds odd and incredible that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
-only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series $S_{5} = \frac{137}{60}$.
-Indeed in appears in the Ptolemaic approximation for $\pi$: $$\frac{377}{120} = 2 + S_{5}/2$$.
-Recall that the electrical constant a characterizes the force $\frac{\hbar c}{al^{2}}$ between two l - distant
+only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series 
+\begin{equation}
+S_{5} = \frac{137}{60}
+\end{equation}
+Indeed it appears in the Ptolemaic approximation for $\pi$: 
+\begin{equation}
+\frac{377}{120} = 2 + S_{5}/2
+\end{equation}
+Recall that the electrical constant a characterizes the force 
+\begin{equation}
+\frac{\hbar c}{al^{2}}
+\end{equation} between two l - distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
@@ -603,8 +624,11 @@ This is the degenerate arithmetic form of the spatio-temporal holographic princi
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
-$T^{2} = L^{3} = M^{5} = n^{30}$ where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The entire Holic
-Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and of dimension 210.
+\begin{equation}
+T^{2} = L^{3} = M^{5} = n^{30}
+\begin{equation}
+where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relates to the apparent world. The entire Holic
+Principle, also relates to the quantum vacuum; it would involve a term $F^{7}$ , and of dimension 210.
 
 \subsection{The retention of Information}
 
@@ -627,7 +651,9 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
-$u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}$
+\begin{equation}
+u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}
+\end{equation}
 defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
@@ -844,7 +870,7 @@ and the Kotov cosmic period must be saluted as decisive achievements. Now, we ha
 [3] direct connexions between physical and biological parameters which have escaped researchers.
 So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse,
 the `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
-implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
+implies Life, in contradiction with Darwin's `accidental life` approach, a generally admitted so-
 called `theory` which is contradicted by so many missing links [26].
 Whilst the physicists community debates; the minority believes in a Single Final
 Theory, whereas a vast majority have given-up their believes towards an `Anthropic Principle` primacy, the Multiverse conundrum. The present article settles the
@@ -868,8 +894,8 @@ now recognized [28][29], but without mentioning a crucial point: he predicted th
 a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin vague arguments
-with a scientific theory. Secondly, in quantum physics, the so-called 'incertitude relations', which are
-only manifestations of the general (Field and flickering Matter) wave propagation, through Fourier
+with a scientific theory. Secondly, in quantum physics, the so-called 'uncertainty principle', which is
+only the manifestation of the general (Field and flickering Matter) wave propagation, through Fourier
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
 
