--- a/main.tex
+++ b/main.tex
@@ -110,6 +110,7 @@ homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
 defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
+\begin{equation}
 \lambdabar_{e} = \hbar/cm_{e}
 \end{equation} is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
