--- a/main.tex
+++ b/main.tex
@@ -627,7 +627,7 @@ suggesting the existence of a Grandcosmos, as the Topological Axis does also, wh
 dimension n = 30, the natural extension of the above :
 \begin{equation}
 T^{2} = L^{3} = M^{5} = n^{30}
-\begin{equation}
+\end{equation}
 where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relates to the apparent world. The entire Holic
 Principle, also relates to the quantum vacuum; it would involve a term $F^{7}$ , and of dimension 210.
 
