--- a/main.tex
+++ b/main.tex
@@ -979,7 +979,7 @@ of proving the existence of a fundamental theory.
 \begin{figure}[h]
 \centering
 \includegraphics[width=8cm,height=6.5cm]{./figures/triaxis.png}
-\caption{Tri-axis superframe structure}
+\caption{Tri-axis superframe structure. Geo dimensional property of the couple Universe-Grandcosmos. In a 3-D super-space , length, time and mass ratios are considered as vectors. The ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections the same ratio, that of the Hubble radiusby the electron Compton wavelength2, and for mass ratio that of $M\prime$ by the electron mass; $M\prime$ being the critical mass in the grandcosmos reduced spherical hologram. }
 \end{figure}
 
 \section{Citations}
