--- a/main.tex
+++ b/main.tex
@@ -776,7 +776,7 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
 \begin{equation}
-W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}
+W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d_{e}
 \end{equation}
 \begin{equation}
 Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}
@@ -818,8 +818,8 @@ and the above relation giving $a_{G}$ shows a dual form, the first one without a
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
-Now, as recalled before in the Holic Principle, the exponents represents the number of
-dimensions. So, this corresponds to a dimensional reduction, by eliminating 137, from 9D and 6D to
+Now, as recalled previously in the Holic Principle, the exponents represent the number of
+dimensions. So, this correlates to a dimensional reduction, by eliminating 137, from 9D and 6D to
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
 Bearing in mind:
