--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,8 @@ the double cosmic correlation defines a Topological Axis using Euler-Napier cons
 primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic
 dimensions corresponding to the simplest space-time-matter diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$. This dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by
 two mandatory dimensional analysis, interpreted as the Supercycle period. The visible
-Universe wavelength 'Topon': 2G$\hbar$/Rc$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m corresponds to $n \approx 2e^{e}$ and enters the 1D
+Universe wavelength `Topon`: 
+2G$\hbar$/Rc$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m corresponds to $n \approx 2e^{e}$ and enters the 1D
 mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying
 the critical condition, and breaking the Planck wall by a factor $10^{61}$ , justifying the Hawking
 trans-planckian frequencies. The monochrome holographic extension leads to a
@@ -98,7 +99,7 @@ Cosmological Principle.
 
 \section{Introduction}
 \subsection{Introduction: Deterministic Computation and Hierarchy Principle}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ration p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_G\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement (10$^{-4}\!$).
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ratio p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_{G}\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement 10$^{-4}\!$.
 
 One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on a and aG from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics.... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
