--- a/main.tex
+++ b/main.tex
@@ -890,13 +890,13 @@ directly the Large time periodicity of an all-deterministic Grandcosmos, as it g
 calculation the visible Universe horizon radius, in a formula which was present for a century in
 astrophysics text-books: the limit of a star radius when the number of atoms reduce to unity [3].
 This is tied to the application of the exclusion principle that Eddington dared to apply in cosmology.
-For this reason he was declared 'crakpot' and his theory discarded by a majority. The same rejection
+For this reason he was declared `crakpot` and his theory discarded by a majority. The same rejection
 seems to apply now to Atiyah's last work. Fortunately, the large theoretical advance of Eddington is
 now recognized [28][29], but without mentioning a crucial point: he predicted the tau fermion with
 a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin vague arguments
-with a scientific theory. Secondly, in quantum physics, the so-called 'uncertainty principle', which is
+with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principle`, which is
 only the manifestation of the general (Field and flickering Matter) wave propagation, through Fourier
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
@@ -907,20 +907,33 @@ transform properties. Thirdly, in cosmology, the recourse to the Multiverse conu
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
-confirmed by holographic quanto-cosmic relations. The Relativity theory is a local one and do not
-apply in Cosmology: the Absolute Space-time is re-established, realized by the Microwave Cosmic
-Background, which identifies with the Grandcosmos Absolute Frame.
-The standard Holographic Principle must be generalized to units others than the Planck length,
-even invoking the visible Universe wavelength in 1D holography, which breaks another taboo of
-current thinking: the Planck wall, by an enormous factor, about $10^{61}$ resolving the vacuum energy
-dilemna factor by $10^{122}$ .
-The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
-be confirmed by recent studies [30].
+confirmed by holographic relations. The standard cosmological principle was unduly limited to
+spatial homogeneity. The Relativity theory, unable to define an inertial frame, is a local one and do
+not apply in Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
+Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is a quasi-
+absolute clock, ruled by the tachyonic celerity.
+The simplest topological equations, the equality between dimensionless topological varieties,
+circumference, area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest
+chapter of physics. This modern, negative, opinion is in fact contrary to the ancient culture, for
+which the Cosmology is the first of all science, so must be the simplest. In the original sens of the
+word `revolution`, it is a return to the source of Science, the `all is whole number`, of Pythagoras.
+Even the degenerate form of topological or holographic relations, the simplest diophantine
+equations, the Holic Principle, shows direct pertinence. In particular it emphatizes the 30
+dimensions, which appear decisive in the Topological Axis, and identifies with the sum of 26 string
+dimensions and 4 of space-time.
+The standard Holographic Principle must be generalized to wavelengths others than the Planck
+length, in particular the Topon, the visible Universe wavelength in 1D holography, which breaks
+another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$ , resolving the
+vacuum energy dilemma factor $10^{122}$ .
+The high precision (until ppb) prove that the traditional scientific thinking is not at all baffled by
+the physical parameter values, meaning they are mere mathematical constants. In this respect, the
+high precision in the measurement of the Fermi constant, Muon mass, background temperature and
+Kotov cosmic period must be saluted as decisive achievements.
 The simplest method of looking for simple monomial expressions involving mathematical
 constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
-should be worried what the Universe would be if a were not 137.035999...`. It definitly
-disproves the Multiverse Hypothesis.
+should be worried what the Universe would be if a were not 137.035999...` This is a definite
+refutation of the Multiverse Hypothesis.
 The present article confirms also the Topological Axis, which was obtained by the simplest
 visualizing method to represent in a single figure the characteristic lengths in macro and micro-
 physics, taking the electron wavelength as unity. The pertinence of the Topological Axis confirms
@@ -929,53 +942,59 @@ tachyonic bosonic version, since the canonical dimension 26 appears to character
 universe radius R. This confirms that c is not a cosmic pertinent speed, as is clearly shown both by
 logic (it is far too slow) and quantum non-locality.
 Moreover, by excluding c in the simplest tool of elementary physics, prospective dimensional
-analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature
-and the cosmic overall periodicity, which connects with the holic dimension n = 30 in the
-Topological Axis, whose apparent dissymetry suggests directly the existence of a Grandcosmos.
+analysis, this gives immediately a very good approximation of both R/2, the cosmic temperatureand the cosmic overall periodicity, which connects with the holic dimension n = 30 in the
+Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
 While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
 appears, showing the gauge bosons, so confirming the Standard Model of Particle Physics, but with
 massive gluon, which is independently seriously considered [31].
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
-Poincaré, the father of 4D Relativity Theory himself, recommended. Indeed their confusion, by
-writing c = 1, impeded the fact that R is a trivial length, already present in astrophysical text-books.The simplest model, the gravitational Hydrogen molecule gives R, explaining the above 2 factor
-and justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant
-70.790 (km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s),
-which confirms the direct novea measurement, but disagree $3\theta$ with the standard value.
+Poincare, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing c =
+1, impeded the fact that the Hubble-Lemaitre radius R is a trivial length.
+The simplest model, the gravitational Hydrogen molecule gives R, explaining the 2 factor and
+justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant 70.790
+(km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s), which
+confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
 The simplest statistical theory of Eddington gave another justification to R. Also, particularly
 simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
-trivial fraction 3M/10 of the observable universe.
-The simplest topological equations, the equality between dimensionless varieties, circumference,
-area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest chapter of
-physics. This modern, negative, opinion is in fact contrary to the ancient culture, for which the
-Cosmology is the first of all science, so must be the simplest. In the original sens of the word
-`revolution`, it is a return to the source of Science, the 'all is whole number', of Pythagoras. Even the
-degenerate form of topological or holographic relations, the simplest diophantine equations, the
-Holic Principle, shows direct pertinence. In particular it emphatizes the 30 dimensions, which
-appear decisive in the Topological Axis.
+trivial fraction 3M/10 of the observable universe. This is probably the most dramatic prediction in
+all scientific history.
 The simplest proof of the computation basis character of the electrical parameter a is provided
-by the multiple appearance of the terms $e^{a}$ and $a^{a}$ . The later is of order $e^{p/e}$ , while $e^{1/e}$ is decisive for
-the operational definition of e. The fact that $a^{a}$ appears also in the 5th Optimal (305 notes) Musical
-Scale highlights a liaison with Arithmetics.
+by the multiple appearance of the terms $e^{a}$ and $a^{a}$ .
 Now, the deep significance of a number of dimensions is the number of independent variables,
-which is a fundamental invariant, whatever the theory [32]. So, it is normal to introduce the
+which is a fundamental invariant, whatever the theory [32]. So, it is logical to introduce the
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
 Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
 work, the essential role of octonion algebra in the final theory [24].
 The ancestral problem of the stability of the solar system must be revisited, taking into account
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
-and Arp effects must be seriously considered, and used to constrain the flickering Time-Length-
-Mass process.
-It is so previsible that the very large infra-red telescopes in preparation will show in the very far
-field old-type galaxies instead of nascent ones. Then no artifice, as inflation, black energy,
-multiverse, will not save the already refuted standard evolutionary model.
-It is now clear that present mathematics are incomplete, and this article announces a
-Reunification of Philosophy, Mathematics, Physics, Informatics and Theoretical Biology.
-Acknowledgements. The authors want to salute the memory of Sir Michael Atiyah for this message
-to one of us; `While I appreciate your efforts in physics, please do not use my name in any way
-other than referencing a published paper`. We salute his modesty, but his introduction of the rather
-unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
-of proving the existence of a fundamental theory.
+and Arp effects must be seriously considered, guided by the flickering Time-Length-Mass concept.
+This answers several main problems : 
+\begin{itemize}
+\item 1/ Unification Gravitation-Quantum Physics, by
+rehabilitating the forgotten Eddington's statistical theory, 
+\item 2/ The real signification of Quantum
+Physics, by assuming Physics is based on Arithmetics, 
+\item 3/ The overall unification by showing that
+cosmology is the basis of United Science, 
+\item 4/ The role of dimensionless parameters, by proving that
+they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
+the Holic Principle, 
+\item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since
+3/10 is the trivial ratio between gravitational and critical energy. 6. The introduction of the Topon
+justifies the $10^{122}$ gap between vacuum energy and the visible universe one.
+The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
+be confirmed by recent studies [30].
+The very large infra-red telescopes in preparation will show in the very far field old galaxies
+instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will
+not save the already refuted standard evolutionary model.
+In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
+antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
+deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
+It is now clear that present mathematics are incomplete, and this Coherent Cosmology
+announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and
+Biology.
+\end{itemize}
 
 \begin{figure}[h]
 \centering
@@ -992,10 +1011,11 @@ A single citation is here: \cite{eddy}. Multiple citations are as follows \cite{
 %%%%%%%% the label \bibitem{eddy} in the bibliography list
 
 \section*{Acknowledgements}
-
-This research would not have been possible without ...
-"Francis M. Sanchez, Valery A. Kotov, Michel Grosmann, Dominique Weigel, Renee
-Veysseyre, Christian Bizouard, Nicolas Flawisky, Denis Gayral, Laurent Gueroult."
+The authors salute the memory of Sir Michael Atiyah for this message to the
+first author; `While I appreciate your efforts in physics, please do not use my name in any way
+other than referencing a published paper`. We salute his modesty, but his introduction of the rather
+unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
+of proving the existence of a fundamental theory.
 %
 \begin{flushright}\footnotesize
 Submitted on Month Day, Year / Accepted on Month Day, Year
