--- a/main.tex
+++ b/main.tex
@@ -843,63 +843,46 @@ where j is the Sternheimer scale factor, central in Theoretical Biology [3][39],
 Temperature ratio Mammal/CMB.
 
 \section {Discussion}
-\markright{Your Full Names.  Short Title of Your Paper}
+\markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
-This article aims to solve the following problems : 
-\begin{itemize}
-\item 1/ Unification Gravitation-Quantum Physics,
-by rehabilitating the forgotten Eddington's statistical theory. 
-
-\item 2/ The real significance of Quantum
-Physics, by assuming Physics is based on Arithmetics. 
-
-\item 3/ The overall unification by showing that
-cosmology is the basis of all science. 
-
-\item 4/ The role of dimensionless parameters, by proving that they
-are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
-Holic Principle.
-
-\item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since the
-trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
-The high precision (ppb) of the relations shown in the present article prove that the traditional
-scientific thinking is not at all baffled by the physical parameter values, meaning they are mere
-mathematical constants. In the wonderful success of mathematical group formalism, it was
-forgotten that the direct search for relations between measurement results has lead Dalton, Balmer,
-Mendeleiev and Mendel to decisive discoveries, as recalled in the introduction. In this respect, the
-high precision in the measurement of the Fermi constant, Muon mass, the background temperature
-and the Kotov cosmic period must be saluted as decisive achievements. Now, we have also shown
-[3] direct connexions between physical and biological parameters which have escaped researchers.
-So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse,
-the `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
-implies Life, in contradiction with Darwin's `accidental life` approach, a generally admitted so-
-called `theory` which is contradicted by so many missing links [26].
-Whilst the physicists community debates; the minority believes in a Single Final
-Theory, whereas a vast majority have given-up their believes towards an `Anthropic Principle` primacy, the Multiverse conundrum. The present article settles the
-arguments in favor of a single steady-state cosmos.
-Another type of separation exists, but with not any debate: only a small minority think Physics
+There is presently an intense debate in physics community. Only a minority believes in a Single
+Final Theory, while a large majority have abandoned hope and believes seriously in the extreme
+consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
+debate in favor of a single steady-state cosmos.
+This article confirms direct connexions [3] between physical and biological parameters. So,
+while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
+`Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
+implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
+called `theory` which is contradicted by so many missing links [26]. The fundamental hypothesis of
+this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
+character, experienced in musical sensation. So, intelligent life must be universal. The famous Fermi
+question `where are they?`, is not a paradox, since any abnormal observation is a-priori rejected by a
+dogmatic community.
+Another type of separation exists, but with not any debate: only a small minority thinks Physics
 and Mathematics are unified, while a large majority separates the two domains (so separating also
 Biology). The present article shows that the former are right: physical constants are mathematical
-constants, so the present-day mathematics are still in enfancy, not realizing that the discovery of
-sporadic groups is a crucial discovery for physics. In particular, we have clearly shown that
-Grandcosmos is a computer which uses optimal physico-mathematical constants as calculation basis
-and that they are present in DNA characteristics [3]. The present article show definitely the liaisons
-with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a majority [27].
-There is also the Determinism separation, a majority believing seriously that `God plays dices`,in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
+constants, so the present-day mathematics are still in infancy, not realizing that the discovery of
+sporadic groups is a crucial discovery for physics. In particular, it is clearly shown that
+Grandcosmos is like a computer which uses optimal physico-mathematical dimensionless constants as
+calculation basis and that they are present in DNA characteristics [3]. The present article show
+definitely the liaisons with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a
+majority [27].
+There is also the Determinism separation, a majority believing seriously that `God plays dices`,
+in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
 directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
 astrophysics text-books: the limit of a star radius when the number of atoms reduce to unity [3].
-This is tied to the application of the exclusion principle that Eddington dared to apply in cosmology.
-For this reason he was declared `crakpot` and his theory discarded by a majority. The same rejection
-seems to apply now to Atiyah's last work. Fortunately, the large theoretical advance of Eddington is
-now recognized [28][29], but without mentioning a crucial point: he predicted the tau fermion with
-a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
+This is tied to the application of the exclusion principle that Eddington dared to apply in
+cosmology. For this reason he was declared `crakpot` and his theory discarded by a majority.
+Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
+mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
+The same rejection seems to apply now to Atiyah's last work. The present article shows that at
+least a part of it is very pertinent.
 It seems that the pre-scientific role of chance is a common point between three misleading views
-in present mainstream thinking. Firstly, in biology, the assimilation of Darwin vague arguments
-with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principle`, which is
-only the manifestation of the general (Field and flickering Matter) wave propagation, through Fourier
-transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
-\end{itemize}
+in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's argumentation
+with a scientific theory. Secondly, in quantum physics, the so-called `incertainty principles`, which are
+only manifestations of the general wave propagation (Field and flickering Matter), through Fourier
+transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
 
 \section {Conclusions Simplicity at work}
