--- a/main.tex
+++ b/main.tex
@@ -48,18 +48,21 @@ F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizo
 To the memory of Sir Michael Atiyah\\
 The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multibasis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
 The observed fine tuning between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a huge progress in scientific and engineering computing.
-The three type of mathematical constants are considered: Large, Intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius R $\approx$ 13.812 Gly.
-The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant e as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest physical diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
-The point n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
+Three types of mathematical constants are considered: Large, Intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius R $\approx$ 13.812 Gly.
+The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant e as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest space-time-matter diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
+The dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
 The visible Universe wavelength 'Topon' 2G$\hbar$/Rc$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to n $\approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
 The monochrome holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
+A toponic quantization justifies the Cosmos vastness in a scanned Universe, justifying the entropy factor 1⁄4.
 This implies a tachyonic speed in the same ratio by respect to c, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
-The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A mater-antimater 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation.
-This new space-time structure is tied to unexplained phenomena such as Kotov cycle, Tifft periodicity, Pioneer anomaly and Arp observations.
-The Kotov period, omnipresent in astrophysics, is directly related with the single-electron cosmology by a 10$^{-9}\!$ relation.
-In addition to e, the Archimedes constant $\pi$ and the electric constant a $\approx$ 137.036 appear as privileged calculation basis.
-The fusion Mathematics-Physics is confirmed by 10$^{-9}\!$ precise relations with physical parameters implying Eddington's 137 and Atiyah constant.
-The later enters the Topological axis in liaison with the canonical Galaxy Group radius, the graviton mass and the Higgs Boson, the later being associated to the string dimension d = 496. The dramatic connection of Atiyah constant with the Sternheimer scale factor confirms the fusion of Computation Physics with Theoretical Biology. In particular, the Supercycle Period connects, through the Monster group cardinal, with the Kotov period, itself tied to the well-defined DNA bi-codon mass. The ratio between the Universe mass and the mass associated with the Kotov period, identified with a photon mass, is close to the square of the Monster order. The ratio between the Supercycle period and the Chronon quantum is close to the third power of the Monster order, also close to e$^{137e}\!$ and d$^{60}\!$. It is predicted that the future generation of telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
+The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a
+quasi-absolute clock.
+This new scanning space-time structure is confirmed by single-electron
+cosmology, connected with Kotov period, and relying Sternheimer Biological scale factor and
+Atiyah constant, which appear as privileged computation basis, as well as e, $\pi$ and $a \approx 137.036$,
+in liaison with the sporadic groups. 
+The Atiyah constant enters dramatic ppb precision relations with particle data. This unifies mathematics, physics, chemistry, biology and
+philosophy. It is predicted that the future generation of telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
