--- a/main.tex
+++ b/main.tex
@@ -53,16 +53,15 @@ The extension of the double cosmic correlation defines a Topological Axis using 
 The dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
 The visible Universe wavelength 'Topon' 2G$\hbar$/Rc$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to n $\approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
 The monochrome holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
-A toponic quantization justifies the Cosmos vastness in a scanned Universe, justifying the entropy factor 1⁄4.
+A toponic quantization justifies the Cosmos vastness in a scanned Universe, justifying the entropy factor $1⁄4$.
 This implies a tachyonic speed in the same ratio by respect to c, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
 The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a
 quasi-absolute clock.
-This new scanning space-time structure is confirmed by single-electron
-cosmology, connected with Kotov period, and relying Sternheimer Biological scale factor and
-Atiyah constant, which appear as privileged computation basis, as well as e, $\pi$ and $a \approx 137.036$,
+This new scanning space-time structure is confirmed by single-electron cosmology, connected with Kotov period, relying on Sternheimer's Biological scale factor and
+Atiyah's constant, which appear as privileged computation basis, as well as e, $\pi$ and $a \approx 137.036$,
 in liaison with the sporadic groups. 
-The Atiyah constant enters dramatic ppb precision relations with particle data. This unifies mathematics, physics, chemistry, biology and
-philosophy. It is predicted that the future generation of telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
+Atiyah's constant enters dramatic ppb precision relations with particle data. 
+This unifies mathematics, physics, chemistry, biology and philosophy. It is predicted that the future generation of telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
