--- a/main.tex
+++ b/main.tex
@@ -1008,6 +1008,8 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \bibitem{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 Nature 278, 605-612 (1979). % Here is referred book
 
+\bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge), 1946.
+
 \bibitem{2} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
 2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
 Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7-23. % Here is referred book
