--- a/main.tex
+++ b/main.tex
@@ -69,8 +69,8 @@ Atiyah's constant enters dramatic ppb precision relations with particle data. Th
 \setcounter{page}{1}
 
 
-\markboth{Sanchez, Bizouard, Kotov, Grosman, Weygel, Veysseyre, Bizouard, Gueroult, Flawisky, Gayral, Back to Cosmos}{\thepage}
-\markright{Sanchez, Bizouard, Kotov, Grosman, Weygel, Veysseyre, Bizouard, Gueroult, Flawisky, Gayral, Back to Cosmos}
+\markboth{Sanchez, Kotov, Grosman, Weygel, Veysseyre, Bizouard, Gueroult, Flawisky, Gayral, Back to Cosmos}{\thepage}
+\markright{Sanchez, Kotov, Grosman, Weygel, Veysseyre, Bizouard, Gueroult, Flawisky, Gayral, Back to Cosmos}
 
 \section{Introduction}
 \subsection{Introduction: Deterministic Computation and Hierarchy Principle}
