--- a/main.tex
+++ b/main.tex
@@ -193,7 +193,7 @@ another evacuation mechanism must occur: it would be the role of massive black h
 \label{fig:figure_label}
 \end{figure}
 
-\subsection{Cosmic Holography, Toponic Quantification and Cosmos vastness}
+\subsection{Cosmic Holography and Toponic Quantification}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
