--- a/main.tex
+++ b/main.tex
@@ -281,7 +281,7 @@ time
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 
-\subsection{Evidence for Tachyonic Flickering Space-Time-Matter}
+\subsection{Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 following considerations and observations confirm this hypothesis.
