--- a/main.tex
+++ b/main.tex
@@ -462,9 +462,9 @@ density $\rho_{c}$ .
 Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$. It fits with
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
-\subsection{The intriguing Logic of Prospective Dimensional Analysis}
+\subsection{The Logic of Prospective Dimensional Analysis}
 
-Physical relations use principally physical quantities as monomials of type $Q = M^{x} L^{y} T^{t}$ , where
+Physical relations use principally physical quantities as of type $Q = M^{x} L^{y} T^{t}$ , where
 the three categories, M, L and T are Mass, Length and Time measurements, and where the exponents are
 rational numbers. However, the addition of measures of different categories has no signification.
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So there
