--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,10 @@ another evacuation mechanism must occur: it would be the role of massive black h
 \label{fig:figure_label}
 \end{figure}
 
+Figure 1. TOPOLOGICAL AXIS [3]. Double logarith (y = lnln(Y)) of main dimensionless physical quantities 
+Y corresponds to the Strong dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
+periodicity 8 [25] which at the origin of the name 'topologic axis'.
+    With unit the Electron Compton wavelength, in the macro-physics side, the Universe circumference is tied to the bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, tied to the Sternheimer scale 
 \subsection{Cosmic Holography and Toponic Quantification}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
