--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 
 
 \begin{document}
+\begin{sloppypar}
 
 \renewcommand{\refname}{References}
 \renewcommand{\tablename}{\small Table}
@@ -201,14 +202,14 @@ periodicity 8 [25] which at the origin of the name 'topologic axis'.
     tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
     the Kotov length, through a factor 2pa, with a = 137.036. For n = G, the Atiyah constant, it is the 
-    galaxy group radius, a characteristic cosmic length (10^6 ligth-years). For k = e^2, y = 2e, it is 
+    galaxy group radius, a characteristic cosmic length ($10^6 ligth-years$). For $k = e^2$, $y = 2e$, it is 
     the Grandcosmos radius.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
-    n = 22 (GUT bosons, 10^16 GeV), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pion.  For k = pi, n = gG, y = 496^2 
+    n = 22 (GUT bosons, $10^16 GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
+    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = g \times G$, $y = 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
-    the Higgs boson (125 GeV). For k = 2e^e, it is the Topon, the visible Univerrse wavelength,
+    the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Univerrse wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
     With unit the electron mass, n = 24 would correspond to the gravitin mass, while n = G, 
     to the graviton mass
@@ -374,10 +375,11 @@ compatible with the well-elaborate $10^{-5}$ BIPM measurement \cite{Quinn}, at s
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
 value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
-\begin{equation}
-(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
-\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2}
-\end{equation}
+$$\begin{array}{ll}
+(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
+\qquad  \qquad \Leftrightarrow \\
+G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2} \\
+\end{array}$$
 This value will be confirmed, in the ppb range, in Section III.
 
 \subsection{The omnipresence of the Kotov cycle in astrophysics}
@@ -753,7 +755,7 @@ f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 \begin{equation}
-(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}
+(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \Rightarrow e^{2}
 \end{equation}
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
 the occidental 12 tones scale.
@@ -1137,5 +1139,5 @@ l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, 
 \centerline{\rule{72pt}{0.4pt}}
 }
 
-
+\end{sloppypar}
 \end{document}
