--- a/main.tex
+++ b/main.tex
@@ -190,23 +190,19 @@ another evacuation mechanism must occur: it would be the role of massive black h
 \begin{figure}
 \centering
 \includegraphics[width=8cm,height=6.5cm]{./figures/figure}
-\caption{The Topological Axis.}
-\label{fig:figure_label}
-\end{figure}
-
-Figure 1. TOPOLOGICAL AXIS [3]. Double logarith (y = lnln(Y)) of main dimensionless physical quantities 
+\caption{The Topological Axis.Double logarith (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the Strong dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
-periodicity 8 [25] which at the origin of the name 'topologic axis'.
+periodicity 8 [25] which at the origin of the name `topological axis`.
     With unit the Electron Compton wavelength, in the macro-physics side, the Universe circumference 
     is tied to bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, 
     tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
-    the Kotov length, through a factor 2pa, with a = 137.036. For n = G, the Atiyah constant, it is the 
-    galaxy group radius, a characteristic cosmic length ($10^6 ligth-years$). For $k = e^2$, $y = 2e$, it is 
+    the Kotov length, through a factor $2\pia$, with a = 137.036. For n = G, the Atiyah constant, it is the 
+    galaxy group radius, a characteristic cosmic length ($10^6 ligth-years$). For $k = e^{2}$, $y = 2e$, it is 
     the Grandcosmos radius.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
-    n = 22 (GUT bosons, $10^16 GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
+    n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
     For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = g \times G$, $y = 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Univerrse wavelength,
@@ -214,12 +210,9 @@ periodicity 8 [25] which at the origin of the name 'topologic axis'.
     With unit the electron mass, n = 24 would correspond to the gravitin mass, while n = G, 
     to the graviton mass
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
-    apart a r2 factor.
-    
-    
-    
-   
-
+    apart a $\sqrt2$ factor.}
+\label{fig:figure_label}
+\end{figure}
 
 \subsection{Cosmic Holography and Toponic Quantification}
 
